--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+/build_readmes/json_changelog.txt
+/build_readmes/readme_changelog.txt
